# ebook_manager

./: .gitignore  Ebook_metadata_manager_single_script.py  README.md  ebook_metadata_jupyter_working_file.ipynb
.devcontainer/: devcontainer.json
ebook_metadata_manager/: README.md  pyproject.toml  requirements.txt
ebook_metadata_manager/src/ebook_metadata_manager/: file_handler.py  main.py  metadata_extractor.py  utils.py
